# pem-ec-0d

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: HOW-IT-WORKS.md  INSTALL.md  KNOWN_ISSUES.md  MODEL_CARD.md
docs/adr/: 001-python-0d-mvp.md  002-hybrid-vs-cfd.md  003-springer-membrane-conductivity.md  004-arrhenius-exchange-current-density.md  005-full-butler-volmer.md  006-visual-stack-designer.md  007-v0.5-architecture.md  README.md
docs/meta/: README.md  lessons-learned.md  simulation-project-framework.md
docs/planning/: dataset-audit-2026-04-20.md  v0.5-plan.md  visual-designer-brief.md  visual-designer-plan.md
docs/references/: README.md
docs/theory/: 01-basics-chemistry.md  02-governing-equations.md  03-materials-components.md  04-geometries-designs.md  05-water-management.md  15-expansion-roadmap.md  MASTER_THEORY_REFERENCE.md  README.md
docs/validation/: README.md  bernt2020_v0.5.md  zimmer2026_v0.5.md
src/: __init__.py  assembly.py  components.py  constants.py  electrochemistry.py  fluid.py  materials.py  stack.py  streamlit_app.py  thermal.py  units.py  visualization.py
tests/: test_assembly.py  test_components.py  test_electrochemistry.py  test_fluid.py  test_materials.py  test_stack.py  test_thermal.py  test_units.py  test_validation_bernt2020.py  test_validation_zimmer2026.py  test_visualization.py
tests/data/: README.md  bernt_2020_fig1.csv  zimmer_2026_fig1c.csv
